# MoxieEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Editor/: CMakeLists.txt
Examples/: CMakeLists.txt
Examples/DynamicBuffer/: CMakeLists.txt
Examples/DynamicBuffer/Source/: DynamicBufferExample.cpp  DynamicBufferExample.h
Examples/EnTT/: CMakeLists.txt
Examples/EnTT/Source/: EnTTExample.cpp
Examples/MoxieLogoScene/: CMakeLists.txt
Examples/MoxieLogoScene/Content/: CubeEarthNight.dds  CubeMilkyWay.dds  TexLogo.dds
Examples/MoxieLogoScene/Source/: MoxieLogoScene.cpp  MoxieLogoScene.h
Examples/Textures/: CMakeLists.txt
Examples/Textures/Content/: CubeMarsMap.dds  MarsMap.dds
Examples/Textures/Source/: TexturesExample.cpp  TexturesExample.h
Examples/Textures/shaders/: VertexShader.hlsl
Examples/Threads/: CMakeLists.txt
Examples/Threads/Source/: ThreadsExample.cpp
lib/: CMakeLists.txt
lib/Moxie/: CMakeLists.txt
lib/Moxie/Shaders/: BasePass_PS.cso  BasePass_PS.hlsl  BasePass_VS.cso  BasePass_VS.hlsl
lib/Moxie/Source/: Application.cpp  MoxPCH.h
lib/Moxie/Source/Core/: Simulator.cpp
lib/Moxie/Source/Core/Async/: TaskSystem.cpp
lib/Moxie/Source/Core/Async/Public/: Async.h  TaskSystem.h
lib/Moxie/Source/Gameplay/: MoxEntity.cpp
lib/Moxie/Source/Gameplay/Private/: MoxComponent.cpp  MoxMeshComponent.cpp
lib/Moxie/Source/Gameplay/Public/: MoxComponent.h  MoxEntity.h  MoxMeshComponent.h
lib/Moxie/Source/Graphics/: CommandList.cpp  Device.cpp  GraphicsAllocator.cpp  GraphicsTypes.cpp  GraphicsUtils.cpp  MoxDrawable.cpp  MoxMaterial.cpp  MoxMesh.cpp  MoxRenderProxy.cpp  MoxResourceLoader.cpp  PipelineState.cpp  RangeAllocators.cpp  Renderer.cpp
lib/Moxie/Source/Graphics/D3D12/: D3D12BufferAllocator.cpp  D3D12BufferAllocator.h  D3D12CommandList.cpp  D3D12CommandList.h  D3D12CommandQueue.cpp  D3D12CommandQueue.h  D3D12DescHeapFactory.cpp  D3D12DescHeapFactory.h  D3D12Device.cpp  D3D12Device.h  D3D12DynamicBufferAllocator.cpp  D3D12DynamicBufferAllocator.h  D3D12GraphicsAllocator.cpp  D3D12GraphicsAllocator.h  D3D12MoxUtils.cpp  D3D12MoxUtils.h  D3D12PipelineState.cpp  D3D12PipelineState.h  D3D12ResourceLoader.cpp  D3D12ResourceLoader.h  D3D12StaticBufferAllocator.cpp  D3D12StaticBufferAllocator.h  D3D12TextureAllocator.cpp  D3D12TextureAllocator.h  D3D12UtilsInternal.cpp  D3D12UtilsInternal.h  D3D12Window.cpp  D3D12Window.h
lib/Moxie/Source/Graphics/Features/: RenderPass.cpp
lib/Moxie/Source/Graphics/Features/BasePass/: BasePass.cpp
lib/Moxie/Source/Graphics/Features/Public/: BasePass.h  DrawCommand.h  RenderPass.h
lib/Moxie/Source/Graphics/Public/: CommandList.h  CommandQueue.h  Device.h  GraphicsAllocator.h  GraphicsTypes.h  GraphicsUtils.h  MoxDrawable.h  MoxMaterial.h  MoxMesh.h  MoxRenderProxy.h  MoxResourceLoader.h  PipelineState.h  RangeAllocators.h  Renderer.h  Window.h
lib/Moxie/Source/Math/: MoxGeometry.cpp
lib/Moxie/Source/Math/Public/: MoxGeometry.h  MoxMath.h
lib/Moxie/Source/Public/: Application.h  ContextView.h  Delegate.h  Entity.h  MoxUtils.h  Simulator.h
lib/Moxie/Source/Utils/Public/: CpuProfiling.h
